20-sg-rules/main.tf
resource "aws_security_group_rule" "bastion_internet" {
type = "ingress"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"] # in this can give our laptop ip also but it may change so allowing from internet
security_group_id = local.bastion_sg_id
}

resource "aws_security_group_rule" "mongodb_bastion" {
type = "ingress"
from_port = 22
to_port = 22
protocol = "tcp"
source_security_group_id = local.bastion_sg_id
security_group_id = local.mongodb_sg_id
}

resource "aws_security_group_rule" "redis_bastion" {
type = "ingress"
from_port = 22
to_port = 22
protocol = "tcp"
source_security_group_id = local.bastion_sg_id
security_group_id = local.redis_sg_id
}

resource "aws_security_group_rule" "mongodb_catalogue" {
type = "ingress"
from_port = 27017
to_port = 27017
protocol = "tcp"
source_security_group_id = local.catalogue_sg_id
security_group_id = local.mongodb_sg_id
}

resource "aws_security_group_rule" "mongodb_user" {
type = "ingress"
from_port = 27017
to_port = 27017
protocol = "tcp"
source_security_group_id = local.user_sg_id
security_group_id = local.mongodb_sg_id
}
